--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.0.0
 
 install: gem install jekyll html-proofer
-script: jekyll build && htmlproofer ./_site
+script: jekyll build && htmlproofer ./_site --disable-external
 
 env:
   global:
