--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,8 @@ machine:
     NOKOGIRI_USE_SYSTEM_LIBRARIES: true # speeds up installation of html-proofer
 
 dependencies:
+  override:
+    - gem install jekyll html-proofer jekyll-sitemap jekyll-feed
   post:
     - bundle exec jekyll build
 
