--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ dependencies:
 
 test:
   post:
-    - htmlproofer ./_site --allow-hash-href --check-favicon --check-html --disable-external
+    - htmlproofer ./_site --disable-external
 
 deployment:
   prod:
