--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.3.3
 
 install: gem install jekyll html-proofer jekyll-sitemap jekyll-feed
-script: jekyll build && htmlproofer ./_site --allow-hash-href --check-favicon --check-html --disable-external
+script: jekyll build && htmlproofer ./_site --disable-external
 
 env:
   global:
