--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ name: JonLan2002
 description: Hello World!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: ![JonLan2002](https://avatars.githubusercontent.com/u/6079421)
+avatar: https://avatars.githubusercontent.com/u/6079421
 
 #
 # Flags below are optional
