--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.3.3
 
 install: gem install jekyll html-proofer jekyll-sitemap jekyll-feed
-script: jekyll build --drafts --future --unpublished --verbose --strict_front_matter && htmlproofer ./_site --disable-external
+script: jekyll build --drafts --future --unpublished --verbose && htmlproofer ./_site --disable-external
 
 env:
   global:
