--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.3.3
 
 install: gem install jekyll html-proofer jekyll-sitemap jekyll-feed
-script: jekyll build --drafts --future --unpublished --verbose && htmlproofer ./_site --assume_extension --check_html --verbose
+script: jekyll build --drafts --future --unpublished --verbose && htmlproofer ./_site --assume_extension --check_html
 
 env:
   global:
