Revert "More Updates"
This reverts commit 20347807837590fba3ef749afedfb6d12f43cd11.

--- a/buddy.yml
+++ b/buddy.yml
@@ -8,10 +8,4 @@
     docker_image_tag: "latest"
     execute_commands:
     - "chown jekyll:jekyll $WORKING_DIR"
-    - "jekyll build --verbose"
-  - action: "Execute: htmlproofer"
-    type: "TEST"
-    docker_image_name: "18fgsa/html-proofer"
-    docker_image_tag: "latest"
-    execute_commands:
-    - "htmlproofer ./_site --assume_extension --check_html --verbose"
+    - "jekyll build"
