--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ dependencies:
 
 test:
   post:
-    - htmlproofer ./_site --assume_extension --check_html
+    - htmlproofer ./_site --assume_extension --check_html --verbose
 
 #deployment:
 #  prod:
